--- a/app/views/listado.html
+++ b/app/views/listado.html
@@ -1,19 +1,26 @@
-<div class="row">
-	<div class="col">
-		<h2>Listado</h2>
-		<table class="table table-hover table-striped" ng-controller="ListadoCtrl">
-			<thead class="active" style="background-color:#">
-				<th>Fecha</th>
-				<th>Nombre</th>
-				<th>Apellido</th>
-				<th>Correo</th>
-			</thead>
-			<tbody ng-repeat="registro in registros">
-				<td>{{ registro.fecha | date: format: 'dd-MM-yyyy' }}</td>
-				<td>{{ registro.nombre }}</td>
-				<td>{{ registro.apellido }}</td>
-				<td>{{ registro.correo }}</td>
-			</tbody>
-		</table>
+<div class="row" ng-controller="ListadoCtrl">
+	<div class="col-xs-12 col-md-12">
+		<div>
+			<h2>Listado</h2> 
+			<button class="btn btn-success btn-right" title="Crear nuevo registro" ng-click="nuevoRegistro()">
+				<span class="glyphicon glyphicon-plus"></span>
+			</button>
+		</div>
+		<div class="responsive-table">
+			<table class="table table-hover table-striped">
+				<thead class="active" style="background-color:#">
+					<th>Fecha</th>
+					<th>Nombre</th>
+					<th>Apellido</th>
+					<th>Correo</th>
+				</thead>
+				<tbody ng-repeat="registro in registros">
+					<td>{{ registro.fecha | date: format: 'dd-MM-yyyy' }}</td>
+					<td>{{ registro.nombre }}</td>
+					<td>{{ registro.apellido }}</td>
+					<td>{{ registro.correo }}</td>
+				</tbody>
+			</table>
+		</div>
 	</div>
 </div>
