--- a/app/views/listado-nuevo-modal.html
+++ b/app/views/listado-nuevo-modal.html
@@ -6,15 +6,15 @@
 		<div class="modal-body">
 			<div class="form-group" ng-class="{'has-error': nRegForm.nombre.$invalid, 'has-success': nRegForm.nombre.$valid}">
 				<label>Nombres</label>
-				<input type="text" class="form-control" name="nombre" placeholder="Nombres" ng-model="nombre" required>
+				<input type="text" class="form-control" name="nombre" placeholder="Nombres" ng-model="nuevoReg.nombre" required>
 			</div>
 			<div class="form-group" ng-class="{'has-error': nRegForm.apellido.$invalid, 'has-success': nRegForm.apellido.$valid}">
 				<label>Apellidos</label>
-				<input type="text" class="form-control" name="apellido" placeholder="Apellidos" ng-model="apellido" required>
+				<input type="text" class="form-control" name="apellido" placeholder="Apellidos" ng-model="nuevoReg.apellido" required>
 			</div>
 			<div class="form-group" ng-class="{'has-error': nRegForm.correo.$invalid, 'has-success': nRegForm.correo.$valid}">
 				<label>Correo electrónico</label>
-				<input type="email" class="form-control" name="correo" placeholder="Correo Electrónico" ng-model="correo" required>
+				<input type="email" class="form-control" name="correo" placeholder="Correo Electrónico" ng-model="nuevoReg.correo" required>
 			</div>
 		</div>
 		<div class="modal-footer" align="right">
