autofocus al modal nuevo registro

--- a/app/views/listado-nuevo-modal.html
+++ b/app/views/listado-nuevo-modal.html
@@ -6,7 +6,7 @@
 		<div class="modal-body">
 			<div class="form-group" ng-class="{'has-error': nRegForm.nombre.$invalid, 'has-success': nRegForm.nombre.$valid}">
 				<label>Nombres</label>
-				<input type="text" class="form-control" name="nombre" placeholder="Nombres" ng-model="nuevoReg.nombre" required>
+				<input type="text" class="form-control" name="nombre" autofocus placeholder="Nombres" ng-model="nuevoReg.nombre" required>
 			</div>
 			<div class="form-group" ng-class="{'has-error': nRegForm.apellido.$invalid, 'has-success': nRegForm.apellido.$valid}">
 				<label>Apellidos</label>
