--- a/app/views/inicio.html
+++ b/app/views/inicio.html
@@ -2,6 +2,6 @@
     <img src="images/yeoman.png" alt="I'm Yeoman"><br>
     <h2>AngularJS + Google Apps Script + Google Spreadsheets</h2> <br>
     <p>
-        <a class="btn btn-success" ng-href="#/listado">Ir a demo! <span class="glyphicon glyphicon-ok"></span></a>
+        <a class="btn btn-success" ng-href="/listado">Ir a demo! <span class="glyphicon glyphicon-ok"></span></a>
     </p>
 </div>
